Enhance Windows configuration by adding new key bindings for composer mode and document formatting, while removing obsolete connection profiles from settings. Update editor associations and additional settings for improved functionality.

--- a/visual-studio-code/settings-windows.json
+++ b/visual-studio-code/settings-windows.json
@@ -245,5 +245,11 @@
   "[powershell]": {
     "editor.defaultFormatter": "ms-vscode.powershell"
   },
-  "debug.toolBarLocation": "commandCenter"
+  "debug.toolBarLocation": "commandCenter",
+  "workbench.colorTheme": "Monokai",
+  "svelte.enable-ts-plugin": true,
+  "docker.extension.enableComposeLanguageServer": false,
+  "workbench.editorAssociations": {
+    "*.md": "vscode.markdown.preview.editor"
+  }
 }
